--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,29 +1,15 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
   "buildCommand": "npm run build",
+  "installCommand": "npm ci",
   "outputDirectory": "dist",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
   "framework": "vite",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ],
   "env": {
-    "VITE_API_URL": "@api_url"
-  }
+    "VITE_API_URL": "${VITE_API_URL}"
+  },
+  "rewrites": [
+    { "source": "/api/:path*", "destination": "${VITE_API_URL}/:path*" }
+  ]
 }
 
