chore: minor vercel.json edit

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": { "distDir": "dist" },
-      "installCommand": "npm install",
+      "installCommand": "npm ci || npm install",
       "buildCommand": "npm run build"
     }
   ],
