--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "@grpc/grpc-js": "^1.8.22",
+    "@grpc/proto-loader": "^0.7.7",
     "joi": "^17.12.0",
+    "jsonwebtoken": "^9.0.2",
     "pg-promise": "^11.5.4",
     "uuid": "^9.0.1"
   },
