--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.441.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
