refactor: move Docker files to backend directory and update configuration
- Move Dockerfile and .dockerignore to /backend directory
- Update Dockerfile to work from backend root
- Update .dockerignore to exclude frontend and unnecessary files
- Clean and reinstall backend dependencies
- Verify Gemini SDK v1 syntax and gemini-2.5-flash usage

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,17 +5,16 @@ ENV NODE_ENV=production \
 
 WORKDIR /app
 
-# Copy package files from backend
-COPY backend/package*.json ./
+# Copy package files for dependency resolution
+COPY package*.json ./
 
-# Install dependencies (production only)
+# Install dependencies
 RUN npm ci --omit=dev --no-audit --no-fund --prefer-offline
 
-# Copy backend source code
-COPY backend/ ./
+# Copy backend source
+COPY . .
 
 EXPOSE 3000
 
-# Start the server
 CMD ["npm", "start"]
 
