Add mock data seeding and implement Learner AI ג†’ Content Studio flow
- Created seedMockData.js script to populate database with mock data (1 trainer, 1 learner, 1 course)
- Added npm script 'seed:mock' for easy database seeding
- Implemented complete Learner AI integration flow:
  * Learner AI handler now calls Content Studio to generate personalized lessons
  * Creates course structure automatically after receiving Content Studio response
  * Handles errors with fallback data
- Updated Content Studio client to use new unified endpoint format (three-field structure)
- Updated Content Studio DTO to include learner_name in send payload
- Fixed LessonRepository UUID array casting for trainer_ids field

Flow:
- Content Studio ג†’ Course Builder: Creates course ג… (already working)
- Learner AI ג†’ Course Builder ג†’ Content Studio ג†’ Course Builder: Creates personalized course ג… (now implemented)

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "db:setup": "node scripts/setup-database.js",
     "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed.js",
+    "seed:mock": "node scripts/seedMockData.js",
     "db:reset": "npm run migrate && npm run seed",
     "db:init": "npm run db:setup && npm run migrate && npm run seed",
     "db:push-supabase": "node scripts/push-to-supabase.js",
