--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: Deploy Course Builder
 
 on:
   push:
-    branches: [main]
+    branches: ["master", "main"]
   pull_request:
-    branches: [main]
+    branches: ["master", "main"]
 
 jobs:
   test-backend:
