--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "pg-promise": "^11.5.4",
