--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "express-rate-limit": "^8.2.1",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^4.104.0",
     "pg-promise": "^11.5.4",
     "uuid": "^9.0.1"
   },
