--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "db:reset": "npm run migrate && npm run seed",
     "db:init": "npm run db:setup && npm run migrate && npm run seed",
     "db:push-supabase": "node scripts/push-to-supabase.js",
+    "db:push-data-supabase": "node scripts/push-data-to-supabase.js",
     "db:create-test": "node scripts/create-test-db.js",
     "generate-secrets": "node scripts/generate-secrets.js",
     "migrate:ai-assets": "node scripts/add-ai-assets-column.js"
