refactor: Remove unnecessary data-filling scripts, keep only essential database management scripts

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,18 +12,15 @@
     "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config ./jest.config.js --coverage",
     "db:setup": "node scripts/setup-database.js",
     "migrate": "node scripts/migrate.js",
-    "seed": "node scripts/seed.js",
-    "seed:mock": "node scripts/seedMockData.js",
     "db:clear": "node scripts/clearDatabase.js",
-    "db:reset-mock": "node scripts/clearDatabase.js && node scripts/seedMockData.js",
-    "db:reset": "npm run migrate && npm run seed",
-    "db:init": "npm run db:setup && npm run migrate && npm run seed",
-    "db:push-supabase": "node scripts/push-to-supabase.js",
-    "db:push-data-supabase": "node scripts/push-data-to-supabase.js",
+    "db:init": "npm run db:setup && npm run migrate",
+    "db:verify": "node scripts/verify-db.js",
+    "db:diagnose": "node scripts/diagnose-db.js",
+    "db:test-connection": "node scripts/test-connection.js",
     "check:ai-structure": "node scripts/check-ai-structure.js",
     "test:ai-course": "node test-api-course.js",
-    "db:create-test": "node scripts/create-test-db.js",
     "generate-secrets": "node scripts/generate-secrets.js",
+    "generate-service-keys": "node scripts/generate-service-keys.js",
     "migrate:ai-assets": "node scripts/add-ai-assets-column.js"
   },
   "keywords": [
