feat: Add clean seed script to fill database with sample data

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
     "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config ./jest.config.js --coverage",
     "db:setup": "node scripts/setup-database.js",
     "migrate": "node scripts/migrate.js",
+    "seed": "node scripts/seed.js",
     "db:clear": "node scripts/clearDatabase.js",
     "db:init": "npm run db:setup && npm run migrate",
+    "db:reset": "npm run db:clear && npm run migrate && npm run seed",
     "db:verify": "node scripts/verify-db.js",
     "db:diagnose": "node scripts/diagnose-db.js",
     "db:test-connection": "node scripts/test-connection.js",
