--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "db:setup": "node scripts/setup-database.js",
     "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed.js",
+    "seed:custom": "node scripts/seedToDatabase.js",
     "db:clear": "node scripts/clearDatabase.js",
     "db:init": "npm run db:setup && npm run migrate",
     "db:reset": "npm run db:clear && npm run migrate && npm run seed",
