feat: Add Coordinator registration script and update to new Coordinator URL
- Create registerWithCoordinator.js script for two-stage registration
- Update Coordinator URL to https://coordinator-production-6004.up.railway.app
- Add npm script: npm run register:coordinator
- Successfully registered course-builder-service with Coordinator
- Service ID: 23011385-d122-4f62-ba26-f30e993e5e18

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "test:ai-course": "node test-api-course.js",
     "generate-secrets": "node scripts/generate-secrets.js",
     "generate-service-keys": "node scripts/generate-service-keys.js",
-    "migrate:ai-assets": "node scripts/add-ai-assets-column.js"
+    "migrate:ai-assets": "node scripts/add-ai-assets-column.js",
+    "register:coordinator": "node scripts/registerWithCoordinator.js"
   },
   "keywords": [
     "course-builder",
