Add DevLab integration: auto-trigger DevLab request when learner passes exam

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,16 +10,13 @@
     "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --config ./jest.config.js --runInBand --detectOpenHandles",
     "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config ./jest.config.js --watch",
     "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config ./jest.config.js --coverage",
-    "db:setup": "node scripts/setup-database.js",
-    "migrate": "node scripts/migrate.js",
-    "migrate:team": "node scripts/migrateToDatabase.js",
-    "migrate:custom": "node scripts/migrateToDatabase.js",
-    "seed": "node scripts/seed.js",
-    "seed:team": "node scripts/seedToDatabase.js",
-    "seed:custom": "node scripts/seedToDatabase.js",
+    "db:migrate": "node scripts/migrate.js",
+    "db:seed": "node scripts/seed.js",
     "db:clear": "node scripts/clearDatabase.js",
-    "db:init": "npm run db:setup && npm run migrate",
-    "db:reset": "npm run db:clear && npm run migrate && npm run seed",
+    "db:diagnose": "node scripts/diagnose-db.js",
+    "db:migrate:team": "node scripts/migrateToDatabase.js",
+    "db:seed:team": "node scripts/seedToDatabase.js",
+    "db:reset:team": "node scripts/migrateToDatabase.js && node scripts/seedToDatabase.js",
     "db:verify": "node scripts/verify-db.js",
     "db:diagnose": "node scripts/diagnose-db.js",
     "db:test-connection": "node scripts/test-connection.js",
